--- a/common.css
+++ b/common.css
@@ -7,7 +7,7 @@
     border: solid 1px black;
     border-radius: 10px;
     text-align: center;
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
     padding: 20px;
     margin: 2px;
 
@@ -15,8 +15,4 @@
 
 #container {
     text-align: center;
-}
-
-.gridContainer div:hover {
-    background-color: slategray;
 }
