--- a/common.css
+++ b/common.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: downloadFont;
+    src: url(Fonts/Barlow_Condensed/BarlowCondensed-Regular.ttf);
+}
+
+* {
+    font-family: downloadFont;
+}
+
 .gridContainer {
     display: grid;
     grid-template-columns: repeat(19, 1fr);
@@ -20,13 +29,11 @@
     align-items: center;
     display: flex;
     font-size: 25px;
-    height: 50px;
+    height: 26px;
     margin: 4px;
-    width: 50px;
+    width: 19px;
 }
 
-
-/* FÖRSTA SIDAN */
 
 #container {
     text-align: center;
